[gd_scene load_steps=50 format=3 uid="uid://b8gbbe444b4bl"]

[ext_resource type="Texture2D" uid="uid://dapnmukp11olr" path="res://assets/art/crete/environment/tablecloth.png" id="1_bqos1"]
[ext_resource type="Texture2D" uid="uid://ctlxknl4fihy5" path="res://assets/art/crete/environment/background.png" id="2_tig0u"]
[ext_resource type="Script" path="res://src/scripts/Figure.gd" id="3_v1mnv"]
[ext_resource type="Texture2D" uid="uid://byt6lmb6n070h" path="res://assets/art/shared/tile_maps/figure_tiles.png" id="4_b6mr4"]
[ext_resource type="Texture2D" uid="uid://bibhwi0887lut" path="res://assets/art/shared/tile_maps/shadow_tiles.png" id="5_e2qrx"]
[ext_resource type="Texture2D" uid="uid://bhad17uaqynyt" path="res://assets/art/shared/tile_maps/example_tiles.png" id="6_dwguk"]
[ext_resource type="Texture2D" uid="uid://cxqmbist5vlyb" path="res://assets/art/shared/tile_maps/glyph_tiles.png" id="7_j8yvp"]
[ext_resource type="Script" path="res://src/scripts/GameManager.gd" id="8_8glfb"]
[ext_resource type="FontFile" uid="uid://bfnot86sditsf" path="res://assets/theme/fonts/dpcomic.ttf" id="9_7g6a3"]
[ext_resource type="Texture2D" uid="uid://c5fgikms6shah" path="res://assets/art/crete/environment/buttons/pause_button_normal.png" id="10_7xuk2"]
[ext_resource type="Texture2D" uid="uid://dljg2p2pibb8y" path="res://assets/art/crete/environment/buttons/pause_button_pressed.png" id="11_nvf4q"]
[ext_resource type="Texture2D" uid="uid://d1oekkmetsrdj" path="res://assets/art/crete/environment/buttons/pause_button_hover.png" id="12_h376e"]
[ext_resource type="Texture2D" uid="uid://rsewr1p8ffwd" path="res://assets/art/crete/environment/buttons/pause_button_blue_normal.png" id="13_niqvi"]
[ext_resource type="Texture2D" uid="uid://dbkrolvyv4qow" path="res://assets/art/crete/environment/buttons/pause_button_blue_pressed.png" id="14_r0jcu"]
[ext_resource type="Texture2D" uid="uid://bm0njh71ettj2" path="res://assets/art/crete/environment/buttons/pause_button_blue_hover.png" id="15_3mdxd"]
[ext_resource type="Script" path="res://src/PauseScreen.gd" id="16_tbsc8"]
[ext_resource type="Texture2D" uid="uid://d0xixvit1fshw" path="res://assets/art/crete/environment/pause_screen.png" id="17_ikp6x"]
[ext_resource type="Texture2D" uid="uid://dtcakn1pia41y" path="res://assets/art/crete/environment/buttons/journal_button_normal.png" id="18_g23rw"]
[ext_resource type="Texture2D" uid="uid://bv4d6rp5ljycp" path="res://assets/art/crete/environment/buttons/journal_button_pressed.png" id="19_hl1mk"]
[ext_resource type="Texture2D" uid="uid://ba3nxccxa00l2" path="res://assets/art/crete/environment/buttons/journal_button_hover.png" id="20_5rf52"]
[ext_resource type="Texture2D" uid="uid://dbuynrmjbigig" path="res://assets/art/crete/environment/buttons/to_menu_button_normal.png" id="21_6f5sd"]
[ext_resource type="Texture2D" uid="uid://c57vuhi3bses8" path="res://assets/art/crete/environment/buttons/to_menu_button_pressed.png" id="22_f2fn3"]
[ext_resource type="Texture2D" uid="uid://cbqthuhe1cm4" path="res://assets/art/crete/environment/buttons/to_menu_button_hover.png" id="23_rkfb4"]
[ext_resource type="Texture2D" uid="uid://dmc4y4a3mh2ut" path="res://assets/art/crete/environment/buttons/retry_button_normal.png" id="24_lly04"]
[ext_resource type="Texture2D" uid="uid://bnh8jnku2oci5" path="res://assets/art/crete/environment/buttons/retry_button_pressed.png" id="25_i4427"]
[ext_resource type="Texture2D" uid="uid://dkdxgd3xyiid" path="res://assets/art/crete/environment/buttons/retry_button_hover.png" id="26_tbcuj"]
[ext_resource type="Texture2D" uid="uid://d3hffq41q14ir" path="res://assets/art/crete/environment/buttons/next_button_normal.png" id="27_urcv8"]
[ext_resource type="Texture2D" uid="uid://bxftxnfnbm1xe" path="res://assets/art/crete/environment/buttons/next_button_pressed.png" id="28_2738k"]
[ext_resource type="Texture2D" uid="uid://bb08cspacyn38" path="res://assets/art/crete/environment/buttons/next_button_hover.png" id="29_3y53f"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7a7nd"]
texture = ExtResource("4_b6mr4")
texture_region_size = Vector2i(8, 8)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
22:6/0 = 0
21:6/0 = 0
20:6/0 = 0
19:6/0 = 0
18:6/0 = 0
17:6/0 = 0
16:6/0 = 0
15:6/0 = 0
14:6/0 = 0
13:6/0 = 0
12:6/0 = 0
11:6/0 = 0
10:6/0 = 0
9:6/0 = 0
8:6/0 = 0
7:6/0 = 0
6:6/0 = 0
5:6/0 = 0
4:6/0 = 0
3:6/0 = 0
2:6/0 = 0
1:6/0 = 0
0:6/0 = 0
0:5/0 = 0
0:4/0 = 0
0:3/0 = 0
1:3/0 = 0
1:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
2:4/0 = 0
7:4/0 = 0
6:5/0 = 0
5:5/0 = 0
4:5/0 = 0
3:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
22:4/0 = 0
23:4/0 = 0
21:4/0 = 0
20:4/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
31:3/0 = 0
31:4/0 = 0
31:5/0 = 0
31:6/0 = 0
30:6/0 = 0
29:6/0 = 0
28:6/0 = 0
27:6/0 = 0
26:6/0 = 0
25:6/0 = 0
24:6/0 = 0
23:6/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
30:4/0 = 0
29:4/0 = 0
28:4/0 = 0
27:4/0 = 0
26:4/0 = 0
25:4/0 = 0
24:4/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
22:3/0 = 0
21:3/0 = 0
20:3/0 = 0
19:3/0 = 0
18:3/0 = 0
17:3/0 = 0
16:3/0 = 0
15:3/0 = 0
14:3/0 = 0
13:3/0 = 0
12:3/0 = 0
11:3/0 = 0
10:3/0 = 0
9:3/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
42:2/0 = 0
42:3/0 = 0
41:3/0 = 0
40:3/0 = 0
39:3/0 = 0
32:2/0 = 0
33:2/0 = 0
33:3/0 = 0
33:4/0 = 0
32:4/0 = 0
32:3/0 = 0
32:5/0 = 0
32:6/0 = 0
33:6/0 = 0
33:5/0 = 0
34:5/0 = 0
34:3/0 = 0
35:6/0 = 0
36:6/0 = 0
37:6/0 = 0
38:6/0 = 0

[sub_resource type="TileSet" id="TileSet_4spe5"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_7a7nd")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2ul8j"]
texture = ExtResource("5_e2qrx")
texture_region_size = Vector2i(8, 8)
0:2/0 = 0
1:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
33:3/0 = 0
33:4/0 = 0
33:5/0 = 0
33:6/0 = 0
32:6/0 = 0
31:6/0 = 0
30:5/0 = 0
29:5/0 = 0
28:5/0 = 0
27:5/0 = 0
26:5/0 = 0
25:5/0 = 0
24:5/0 = 0
23:5/0 = 0
22:5/0 = 0
21:5/0 = 0
20:5/0 = 0
19:5/0 = 0
18:5/0 = 0
17:5/0 = 0
16:5/0 = 0
15:5/0 = 0
14:5/0 = 0
13:5/0 = 0
12:5/0 = 0
11:5/0 = 0
10:5/0 = 0
9:5/0 = 0
31:5/0 = 0
28:4/0 = 0
27:4/0 = 0
26:4/0 = 0
25:4/0 = 0
24:4/0 = 0
23:4/0 = 0
22:4/0 = 0
21:4/0 = 0
20:4/0 = 0
19:4/0 = 0
18:4/0 = 0
17:4/0 = 0
16:4/0 = 0
15:4/0 = 0
14:4/0 = 0
13:4/0 = 0
12:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
11:4/0 = 0
10:4/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
32:4/0 = 0
32:5/0 = 0
30:6/0 = 0
29:6/0 = 0
28:6/0 = 0
27:6/0 = 0
26:6/0 = 0
25:6/0 = 0
24:6/0 = 0
23:6/0 = 0
22:6/0 = 0
21:6/0 = 0
20:6/0 = 0
19:6/0 = 0
18:6/0 = 0
17:6/0 = 0
16:6/0 = 0
15:6/0 = 0
14:6/0 = 0
13:6/0 = 0
12:6/0 = 0
11:6/0 = 0
10:6/0 = 0
9:6/0 = 0
8:6/0 = 0
7:6/0 = 0
6:6/0 = 0
5:6/0 = 0
4:6/0 = 0
3:6/0 = 0
2:6/0 = 0
1:6/0 = 0
0:6/0 = 0
0:5/0 = 0
0:4/0 = 0
0:3/0 = 0
1:4/0 = 0
1:5/0 = 0
1:3/0 = 0
2:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
4:4/0 = 0
3:4/0 = 0
8:5/0 = 0
34:3/0 = 0
34:5/0 = 0
35:6/0 = 0
36:6/0 = 0
37:6/0 = 0
38:6/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
42:2/0 = 0
42:3/0 = 0
41:3/0 = 0
40:3/0 = 0
39:3/0 = 0

[sub_resource type="TileSet" id="TileSet_qapih"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_2ul8j")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uxoiu"]
texture = ExtResource("6_dwguk")
texture_region_size = Vector2i(8, 8)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:3/0 = 0
33:3/0 = 0
32:3/0 = 0
31:3/0 = 0
30:3/0 = 0
29:3/0 = 0
28:3/0 = 0
27:3/0 = 0
26:3/0 = 0
25:3/0 = 0
24:3/0 = 0
23:3/0 = 0
22:3/0 = 0
21:3/0 = 0
20:3/0 = 0
19:3/0 = 0
18:3/0 = 0
17:3/0 = 0
16:3/0 = 0
15:3/0 = 0
14:3/0 = 0
13:3/0 = 0
12:3/0 = 0
11:3/0 = 0
10:3/0 = 0
9:3/0 = 0
8:3/0 = 0
7:3/0 = 0
6:3/0 = 0
5:3/0 = 0
4:3/0 = 0
3:3/0 = 0
2:3/0 = 0
1:3/0 = 0
0:3/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
42:2/0 = 0
42:3/0 = 0
41:3/0 = 0
40:3/0 = 0
39:3/0 = 0

[sub_resource type="TileSet" id="TileSet_0gdxd"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_uxoiu")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xjklu"]
texture = ExtResource("7_j8yvp")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_t8n2t"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_xjklu")

[sub_resource type="Animation" id="Animation_fbbmp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShadeLayer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_t0b8w"]
resource_name = "appear_shade_layer_instant"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShadeLayer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_m8xnc"]
resource_name = "fade_shade_layer"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShadeLayer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3, 4.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.87451), Color(1, 1, 1, 0.568627), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_57aqk"]
resource_name = "fade_shade_layer_instant"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShadeLayer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fox12"]
_data = {
"RESET": SubResource("Animation_fbbmp"),
"shade_layer_fade_in_instant": SubResource("Animation_t0b8w"),
"shade_layer_fade_out_4s": SubResource("Animation_m8xnc"),
"shade_layer_fade_out_instant": SubResource("Animation_57aqk")
}

[sub_resource type="Animation" id="Animation_wx7b8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextMessage:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_c7c1r"]
resource_name = "text_message_play"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextMessage:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tbfg4"]
_data = {
"RESET": SubResource("Animation_wx7b8"),
"text_message_play": SubResource("Animation_c7c1r")
}

[sub_resource type="Animation" id="Animation_538g8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture_normal")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_7xuk2")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture_pressed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11_nvf4q")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:texture_hover")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_h376e")]
}

[sub_resource type="Animation" id="Animation_hdgvt"]
resource_name = "button_change"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture_normal")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("13_niqvi")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture_pressed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("14_r0jcu")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:texture_hover")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("15_3mdxd")]
}

[sub_resource type="Animation" id="Animation_2n3nx"]
resource_name = "pause_button_to_environment"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture_normal")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_7xuk2")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture_pressed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11_nvf4q")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:texture_hover")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_h376e")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0syif"]
_data = {
"RESET": SubResource("Animation_538g8"),
"pause_button_to_blue": SubResource("Animation_hdgvt"),
"pause_button_to_environment": SubResource("Animation_2n3nx")
}

[node name="LVL 1-1" type="Node2D"]
scale = Vector2(4, 4)

[node name="Composition" type="Node2D" parent="."]

[node name="Tablecloth" type="Sprite2D" parent="Composition"]
z_index = -2
position = Vector2(96, 72)
texture = ExtResource("1_bqos1")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="Composition"]
position = Vector2(144, 81)
texture = ExtResource("2_tig0u")
metadata/_edit_lock_ = true

[node name="Figure" type="CharacterBody2D" parent="."]
script = ExtResource("3_v1mnv")

[node name="FigureMap" type="TileMap" parent="Figure"]
tile_set = SubResource("TileSet_4spe5")
format = 2
layer_0/tile_data = PackedInt32Array(589834, 0, 2, 655370, 0, 2, 655368, 0, 2, 655373, 0, 2)

[node name="ShadeMap" type="TileMap" parent="Figure"]
z_index = -1
position = Vector2(6, 2)
tile_set = SubResource("TileSet_qapih")
format = 2
layer_0/tile_data = PackedInt32Array(655368, 0, 2, 589834, 0, 2, 655370, 0, 2, 655373, 0, 2)

[node name="Example" type="Node2D" parent="."]

[node name="ExampleMap" type="TileMap" parent="Example"]
tile_set = SubResource("TileSet_0gdxd")
format = 2
layer_0/tile_data = PackedInt32Array(458782, 2752512, 2, 524318, 1048576, 2, 327711, 0, 2, 393247, 0, 2, 458783, 2752512, 2, 524319, 0, 2, 327712, 0, 2, 393248, 0, 2, 458784, 2752512, 2, 524320, 0, 2, 458785, 2752512, 2, 524321, 983040, 2, 262174, 1638400, 2, 393246, 327680, 2, 262175, 0, 2, 262176, 0, 2, 262177, 1769472, 2, 393249, 393216, 2)

[node name="GlyphMap" type="TileMap" parent="Example"]
tile_set = SubResource("TileSet_t8n2t")
format = 2
layer_0/tile_data = PackedInt32Array(327706, 131072, 0, 327707, 262144, 0, 393243, 393216, 1, 393244, 262144, 1, 393245, 131072, 0, 458780, 327680, 1, 589850, 196608, 1, 524315, 196608, 3, 524316, 131072, 2, 262171, 393216, 2, 589855, 458752, 2, 589856, 196608, 2, 589857, 131072, 2, 262172, 393216, 0, 589851, 393216, 1, 524317, 458752, 2, 524314, 0, 0, 458778, 0, 2, 589853, 393216, 3, 589854, 393216, 0, 458779, 458752, 1, 327709, 262144, 3, 262170, 65536, 1)

[node name="Spawner" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="Spawner"]
wait_time = 20.0

[node name="GameManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("8_8glfb")
lvl_menu = "res://src/scenes/crete_menu.tscn"
current_lvl = "res://src/scenes/lvl_1_1.tscn"
next_lvl = "res://src/scenes/main_menu.tscn"

[node name="ShadeLayer" type="ColorRect" parent="GameManager"]
offset_right = 288.0
offset_bottom = 162.0
color = Color(0, 0, 0, 0.627451)
metadata/_edit_lock_ = true

[node name="SLAnimationPlayer" type="AnimationPlayer" parent="GameManager/ShadeLayer"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_fox12")
}

[node name="TextMessage" type="RichTextLabel" parent="GameManager"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 60.0
offset_right = 288.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/normal_font = ExtResource("9_7g6a3")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
scroll_active = false
metadata/_edit_lock_ = true

[node name="TMAnimationPlayer" type="AnimationPlayer" parent="GameManager/TextMessage"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_tbfg4")
}

[node name="PauseButton" type="TextureButton" parent="GameManager"]
offset_left = 265.0
offset_top = 3.0
offset_right = 284.0
offset_bottom = 22.0
texture_normal = ExtResource("10_7xuk2")
texture_pressed = ExtResource("11_nvf4q")
texture_hover = ExtResource("12_h376e")
metadata/_edit_lock_ = true

[node name="PBAnimationPlayer" type="AnimationPlayer" parent="GameManager/PauseButton"]
libraries = {
"": SubResource("AnimationLibrary_0syif")
}

[node name="PauseScreen" type="Control" parent="GameManager"]
layout_mode = 3
anchors_preset = 0
offset_right = 288.0
offset_bottom = 162.0
script = ExtResource("16_tbsc8")

[node name="TextureRect" type="TextureRect" parent="GameManager/PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = -78.0
offset_right = 81.5
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17_ikp6x")
metadata/_edit_lock_ = true

[node name="JournalButton" type="TextureButton" parent="GameManager/PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -74.0
offset_right = 39.5
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("18_g23rw")
texture_pressed = ExtResource("19_hl1mk")
texture_hover = ExtResource("20_5rf52")

[node name="ToMenuButton" type="TextureButton" parent="GameManager/PauseScreen"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 95.0
offset_top = -41.0
offset_right = 122.0
offset_bottom = -14.0
grow_vertical = 0
texture_normal = ExtResource("21_6f5sd")
texture_pressed = ExtResource("22_f2fn3")
texture_hover = ExtResource("23_rkfb4")

[node name="RetryButton" type="TextureButton" parent="GameManager/PauseScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -41.0
offset_right = 14.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("24_lly04")
texture_pressed = ExtResource("25_i4427")
texture_hover = ExtResource("26_tbcuj")

[node name="NextButton" type="TextureButton" parent="GameManager/PauseScreen"]
layout_mode = 0
offset_left = 167.0
offset_top = 121.0
offset_right = 194.0
offset_bottom = 148.0
texture_normal = ExtResource("27_urcv8")
texture_pressed = ExtResource("28_2738k")
texture_hover = ExtResource("29_3y53f")

[node name="LvlLabel" type="RichTextLabel" parent="GameManager/PauseScreen"]
layout_mode = 0
offset_left = 63.0
offset_top = 102.0
offset_right = 226.0
offset_bottom = 121.0
theme_override_fonts/normal_font = ExtResource("9_7g6a3")
bbcode_enabled = true
text = "[center][shake rate=10 level=10 connected=1]LVL 1-1[/shake][/center]"

[connection signal="pressed" from="GameManager/PauseButton" to="GameManager" method="_on_pause_button_pressed"]
[connection signal="pressed" from="GameManager/PauseScreen/JournalButton" to="GameManager/PauseScreen" method="_on_journal_button_pressed"]
[connection signal="pressed" from="GameManager/PauseScreen/ToMenuButton" to="GameManager/PauseScreen" method="_on_to_menu_button_pressed"]
[connection signal="pressed" from="GameManager/PauseScreen/RetryButton" to="GameManager/PauseScreen" method="_on_retry_button_pressed"]
[connection signal="pressed" from="GameManager/PauseScreen/NextButton" to="GameManager/PauseScreen" method="_on_next_button_pressed"]
